# batch_run

./: Cargo.toml  README.md  build.rs
src/: batch.rs  batch_result.rs  binary.rs  cargo_rustc.rs  config.rs  dependencies.rs  entry.rs  env.rs  error.rs  features.rs  lib.rs  logging.rs  message.rs  mismatch.rs  normalize.rs  result.rs  run.rs  runner.rs  snapshot.rs  term.rs
src/result/: error.rs
tests/: test.rs
tests/basic/: compile-fail.stderr  print-both.snapshot  print-stdout.rs  print-stdout.snapshot  run-fail.snapshot
tests/ui/: compile-fail-0.stderr  compile-fail-1.stderr  print-both.snapshot  print-stderr.snapshot  run-fail.snapshot
tests/ui-cases/: compile-fail-mismatch.rs  compile-fail-ok.rs  compile-success-unexpected.rs  compile-success-unexpected.stderr  run-mismatch.rs  run-ok.rs  run-unexpected-compile-fail.rs  run-unexpected-compile-fail.snapshot
tests/ui-runner/: main.rs  main.snapshot
