[package]
name = "batch_run"
description = "Batch runner for arbitrary Rust files within current project"
version = "1.0.0-alpha.4"
authors = ["Cerberuser <k.bagrov@g.nsu.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cerberuser/batch_run"
documentation = "https://docs.rs/batch_run"
readme = "README.md"

[dependencies]
glob = "0.3"
lazy_static = "1.3"
termcolor = "1.0"
termcolor_output = "1.0.0-rc.3"
rand = "0.7"
ron = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
itertools = "0.9"
